# news-api-email

./: README.md  main.py  pyproject.toml  send_email.py
